# ZeroSpirV

./: .gitmodules  CMakeLists.txt
CMake/: BuildVs2017.bat
